fix flag image size overlapping options

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,11 @@ h3 {
         transform: scale(1, 1);
     }
 }
+
+.flags .flag-options {
+    margin-top: 2rem;
+}
+
 /* Flag styling for selections */
 .flags .flag-options ul {
     display: flex;
